--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,7 @@
+<!-- =====================================================
+     RETRO TERMINAL THEME - HEAD INCLUDE
+     Portfolio: nikiforidi.github.io
+     ===================================================== -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +13,12 @@
     <!-- Minima Theme Stylesheet -->
     <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
 
-    <!-- Retro Terminal Fonts -->
+    <!-- Retro Terminal Fonts (JetBrains Mono + VT323) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=VT323&display=swap" rel="stylesheet">
 
-    <!-- Custom CSS (Retro Theme) -->
+    <!-- Custom CSS (Retro Terminal Theme) -->
     <link rel="stylesheet" href="{{ "/assets/css/custom.css" | relative_url }}">
 
     {%- feed_meta -%}
