--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,5 +32,8 @@
       <p>&copy; {{ site.time | date: '%Y' }} {{ site.title }}</p>
     </div>
   </footer>
+
+  <!-- CRT Effect JS (deferred, non-blocking) -->
+  <script src="{{ '/assets/js/crt-effect.js' | relative_url }}" defer></script>
 </body>
 </html>
